improve the html accessibility

--- a/index.css
+++ b/index.css
@@ -4,10 +4,11 @@
 body{
     background-image: url("./images/bg-desktop.svg");
     background-color: hsl(257, 40%, 49%);
-    width:1440px;
-    padding:30px;
+    width:1440px;s
     color:white;
-    margin-left:30px;
+    margin:0;
+    padding:10px;
+    
   
 }
 
@@ -29,7 +30,7 @@ body{
 .text{
     font-family:'Open Sans';
     font-weight:400; 
-    max-width:500px;
+    max-width:550px;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -64,10 +65,11 @@ body{
 .icons{
     display:flex;
     justify-content:flex-end;
-    bottom:2em;
+    bottom:0;
     left:0;
-    right:5em;
-    gap:20px;
+    margin-right:100px;
+    margin-bottom:5px;
+    gap:15px;
      
 
 }
@@ -75,11 +77,19 @@ body{
     border:2px solid white;
     border-radius:50%;
     padding:2px;
+    margin-right:0;
+    margin-bottom:0;
 }
 
 .icons img:hover{
     background-color:orange;
     
+}
+
+.para{
+    display:flex;
+    flex-direction:column;
+    flex-wrap:wrap;
 }
 
 
